--- a/logo_styles.css
+++ b/logo_styles.css
@@ -1,4 +1,4 @@
 .originality-report-header .bb-logo, .printable-originality-report-header .bb-logo {
     float: left;
-    height: 37px;
+    height: 37px !important;
 }
